--- a/_includes/styles.liquid
+++ b/_includes/styles.liquid
@@ -1,8 +1,15 @@
 {% include "../node_modules/modern-reset/reset.css" %}
 {% include "../css/vars.css" %}
 {% include "../css/global.css" %}
-{% include "../css/code.css" %}
-{% include "../css/entry.css" %}
-{% include "../css/footnotes.css" %}
+
 {% include "../css/header.css" %}
+{% include "../css/blog.css" %}
+{% include "../css/byline.css" %}
+
+{% include "../css/entry.css" %}
+{% include "../css/code.css" %}
+{% include "../css/footnotes.css" %}
+{% include "../css/quotes.css" %}
+{% include "../css/tweet.css" %}
+
 {% include "../css/home.css" %}
