--- a/blog/index.liquid
+++ b/blog/index.liquid
@@ -5,7 +5,7 @@ title: Blog
 {% include "header" %}
 <div class="post-list">
     {% for post in collections.posts %}
-    <article class="h-entry entry entry--list entry--blog" itemscope itemtype="http://schema.org/BlogPosting">
+    <article class="h-entry entry entry--list" itemscope itemtype="http://schema.org/BlogPosting">
         <h2 class="p-name entry__title" itemprop="headline">
             <a href="{{ post.url }}">{{ post.data.title }}</a>
         </h2>
