include just the css needed for each template

--- a/_includes/article.liquid
+++ b/_includes/article.liquid
@@ -1,6 +1,8 @@
----
-layout: default
----
+<!doctype html>
+<html lang="en">
+{% include "head" %}
+<body>
+<main class="main" role="main">
 {% include "header" %}
 <article class="h-entry entry" itemscope itemtype="http://schema.org/BlogPosting">
     <header>
@@ -27,3 +29,6 @@ layout: default
     }
 }());
 </script>
+</main>
+</body>
+</html>
