--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -9,6 +9,7 @@
   <link rel="icon" href="/icon.svg" />
   <link rel="apple-touch-icon" href="/icon.svg" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml" />
+  <link rel="test" content="{{ layout }}"/>
 
   {% capture css %}{% include "styles" %}{% endcapture %}
   <style>{{ css | safe }}</style>
