--- a/blog/index.liquid
+++ b/blog/index.liquid
@@ -1,20 +1,4 @@
 ---
-layout: default
+layout: blog
 title: Blog
 ---
-{% include "header" %}
-<div class="post-list">
-    {% for post in collections.posts %}
-    <article class="h-entry entry entry--list" itemscope itemtype="http://schema.org/BlogPosting">
-        <h2 class="p-name entry__title" itemprop="headline">
-            <a href="{{ post.url }}">{{ post.data.title }}</a>
-        </h2>
-        <p class="byline">
-            <a class="u-url byline__permalink" href="{{ post.url }}" itemprop="url">∞</a>
-            <time class="dt-published byline__date" datetime="{{ post.date | machineDate }}" itemprop="datePublished">{{ post.date | humanDate }}</time>
-        </p>
-        <div class="p-summary entry__excerpt" itemprop="description">{{ post.data.summary }}</div>
-    </article>
-    {% endfor %}
-</div>
-{% include "footer" %}
