--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -11,7 +11,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml" />
 
   {% capture css %}{% include "styles" %}{% endcapture %}
-  <style>{{ css | safe }}</style>
+  <style>{{ css | cssmin | safe }}</style>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
