inline and minify css per page (#18)
* inline the css - same for every page

* refactor css

* squish

* include just the css needed for each template

* squish grrrr

* squish argh

* minify css

--- a/_includes/article.liquid
+++ b/_includes/article.liquid
@@ -1,8 +1,10 @@
----
-layout: default
----
-{% include header %}
-<article class="h-entry entry entry--blog entry--full" itemscope itemtype="http://schema.org/BlogPosting">
+<!doctype html>
+<html lang="en">
+{% include "head" %}
+<body>
+<main class="main" role="main">
+{% include "header" %}
+<article class="h-entry entry" itemscope itemtype="http://schema.org/BlogPosting">
     <header>
         <h1 class="p-name entry__title" itemprop="headline">{{ title }}</h1>
     </header>
@@ -14,9 +16,9 @@ layout: default
         </p>
     </footer>
 
-    <div class="e-content entry__content long-form" itemprop="articleBody">{{ content | safe }}</div>
+    <div class="e-content entry__content" itemprop="articleBody">{{ content | safe }}</div>
 </article>
-{% include footer %}
+{% include "footer" %}
 <script>
 (function() {
     if (document.querySelector("blockquote.twitter-tweet")) {
@@ -27,3 +29,6 @@ layout: default
     }
 }());
 </script>
+</main>
+</body>
+</html>
