--- a/_includes/home.liquid
+++ b/_includes/home.liquid
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en">
-{% include head %}
+{% include "head" %}
 <body class="home-page">
     <h1 class="home-name">David Goss</h1>
     <section class="home-intro">
-        <p>I'm a full-stack software developer based in the UK.</p>
-        <p>Most recently, I wrote about {% for post in collections.posts limit:1 %}<a href="{{ post.url }}">{{ post.data.latest }}</a>{% endfor %}. There are <a href="/blog/">other posts</a> too.</p>
+        {{ content | safe }}
     </section>
     <p class="home-social">
         <a href="https://github.com/davidjgoss" title="GitHub"><img alt="" src="/static/github.svg" width="27" height="27"/></a>
