--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -6,8 +6,8 @@
 
   <link rel="preconnect" href="//www.google-analytics.com"/>
   <link rel="stylesheet" href="//fonts.googleapis.com/css2?family=Overpass+Mono&family=Overpass:ital,wght@0,400;0,600;1,400;1,600&display=swap" />
-  <link rel="icon" href="/icon.svg" />
-  <link rel="apple-touch-icon" href="/icon.svg" />
+  <link rel="icon" href="/static/icon.svg" />
+  <link rel="apple-touch-icon" href="/static/icon.svg" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml" />
 
   {% capture css %}{% include "styles" %}{% endcapture %}
