better styling treatment for footnotes

--- a/css/footnotes.css
+++ b/css/footnotes.css
@@ -1,5 +1,10 @@
 .footnotes {
-    font-size: 0.8rem;
+    font-size: 0.75rem;
+    color: var(--quote-color);
+}
+
+.footnotes-sep {
+    visibility: hidden;
 }
 
 .footnote-backref,
