--- a/css/header.css
+++ b/css/header.css
@@ -35,5 +35,5 @@
     text-align: center;
     font-size: 0.75em;
     line-height: 1.25em;
-    margin-top: 2.5rem;
+    margin: 2.5rem 0 1rem 0;
 }
