images and code blocks can go bigger if enough space

--- a/css/entry.css
+++ b/css/entry.css
@@ -30,3 +30,13 @@
     border: 0;
     margin: 2em auto;
 }
+
+@media all and (min-width: 830px) {
+    .entry__content img,
+    .entry__content pre {
+        display: block;
+        max-width: calc(100% + 150px);
+        margin-left: -75px;
+        margin-right: -75px;
+    }
+}
