some visual improvements (#20)
* use min and max to make headline size scale sensibly

* images and code blocks can go bigger if enough space

* better presentation of code

* a bit more subtle

* no more bigger first paragraph

--- a/css/entry.css
+++ b/css/entry.css
@@ -2,10 +2,6 @@
     margin-top: 1.5rem;
 }
 
-.entry__content > :first-child {
-    font-size: 1.25em;
-}
-
 .entry__content > * + * {
     margin-top: 1.5rem;
 }
@@ -29,4 +25,20 @@
     height: 1px;
     border: 0;
     margin: 2em auto;
+}
+
+@media all and (min-width: 830px) {
+    .entry__content img {
+        display: block;
+        max-width: calc(100% + 150px);
+        margin-left: -75px;
+        margin-right: -75px;
+    }
+
+    .entry__content pre {
+        display: block;
+        max-width: calc(100% + 36px);
+        margin-left: -18px;
+        margin-right: -18px;
+    }
 }
