--- a/css/header.css
+++ b/css/header.css
@@ -17,14 +17,14 @@
     font-weight: bold;
     font-size: 1.5em;
     line-height: 1em;
-    padding: 0.75em;
-    padding-top: 1.5em;
+    padding: 1rem;
+    padding-top: max(1rem, min(5vh, 2rem));
 }
 
 .site-nav {
     float: left;
     margin: 1rem;
-    margin-top: 2.25rem;
+    margin-top: max(1rem, min(5vh, 2rem));
     color: #666;
     text-decoration: none;
     text-transform: uppercase;
