--- a/css/footnotes.css
+++ b/css/footnotes.css
@@ -11,3 +11,10 @@
 .footnote-ref a {
     text-decoration: none;
 }
+
+.footnote-ref {
+    position: relative;
+    top: -0.5em;
+    font-size: 0.75em;
+    vertical-align: inherit;
+}
