--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 600px;
     min-height: 100vh;
     padding: 0 1.5rem;
 }
