rework link underlining and code within links

--- a/css/code.css
+++ b/css/code.css
@@ -41,6 +41,11 @@ pre code {
 	border-bottom: none;
 }
 
+a code {
+	color: inherit;
+	border-bottom: none;
+}
+
 .token.comment,
 .token.block-comment,
 .token.prolog,
