--- a/css/global.css
+++ b/css/global.css
@@ -14,6 +14,8 @@ body {
 
 a {
 	color: var(--theme-color);
+	border-bottom: 1px solid var(--theme-color);
+	text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -23,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 a, h2 a {
 	color: inherit;
-	text-decoration: none;
+	border-bottom: none;
 }
 
 h1 {
