--- a/_includes/styles.liquid
+++ b/_includes/styles.liquid
@@ -1,5 +1,5 @@
 {% include "../node_modules/modern-reset/reset.css" %}
-{% include "../css/vars.css" %}
+{% include "../css/theme.css" %}
 {% include "../css/global.css" %}
 
 {% if layout == "blog" %}
