--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 .home-page {
-    background-color: var(--theme-color);
+    background-color: var(--primary-color);
     color: #333;
     display: flex;
     flex-direction: column;
