--- a/css/quotes.css
+++ b/css/quotes.css
@@ -1,6 +1,6 @@
 blockquote {
     position: relative;
-    color: var(--fade-color);
+    color: var(--mid-color);
     padding: 0 3em;
 }
 
@@ -9,7 +9,7 @@ blockquote::before {
     position: absolute;
     top: 0.3em;
     left: 0.3em;
-    color: var(--theme-color);
+    color: var(--primary-color);
     font-size: 3em;
 }
 
