--- a/css/global.css
+++ b/css/global.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-	background: white;
+	background-color: white;
 	color: var(--base-color);
     line-height: 1.5rem;
 	max-width: 700px;
