various visual improvements (#23)
* scale header padding per viewport height

* fix footnote links affecting leading

* wider width in general but narrower on home

* rework link underlining and code within links

* add implicit figures

* get the styling of figure and figcaption right

* renames

* use custom properties in a way that's accessible when not supported

--- a/css/byline.css
+++ b/css/byline.css
@@ -1,10 +1,10 @@
 .byline {
-	color: var(--fade-color);
+	color: var(--mid-color);
 }
 
 .byline__permalink {
 	font-weight: bold;
-	text-decoration: none;
+	border-bottom: none;
 }
 
 .byline__date {
