--- a/css/global.css
+++ b/css/global.css
@@ -4,16 +4,18 @@ html {
 }
 
 body {
-	background: white;
+	background-color: white;
 	color: var(--base-color);
     line-height: 1.5rem;
-	max-width: 680px;
+	max-width: 700px;
 	padding: 0 1rem;
 	margin: 0 auto;
 }
 
 a {
-	color: var(--theme-color);
+	color: var(--primary-color);
+	border-bottom: 1px solid var(--primary-color);
+	text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -23,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 a, h2 a {
 	color: inherit;
-	text-decoration: none;
+	border-bottom: none;
 }
 
 h1 {
