--- a/css/home.css
+++ b/css/home.css
@@ -1,16 +1,17 @@
 .home-page {
-    background-color: var(--theme-color);
+    background-color: var(--primary-color);
     color: #333;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 600px;
     min-height: 100vh;
     padding: 0 1.5rem;
 }
 
 .home-page a {
-    color: white;
-    text-decoration: none;
+    color: var(--contrast-color);
+    border-bottom: none;
 }
 
 .home-name {
