--- a/_includes/home.liquid
+++ b/_includes/home.liquid
@@ -7,9 +7,9 @@
         {{ content | safe }}
     </section>
     <p class="home-social">
-        <a href="https://github.com/davidjgoss" title="GitHub"><img alt="" src="/static/github.svg" width="27" height="27"/></a>
-        <a href="https://www.linkedin.com/in/david-goss-2b986a181/" title="LinkedIn"><img alt="" src="/static/linkedin.svg" width="27" height="27"/></a>
-        <a href="https://twitter.com/davidjgoss" title="Twitter"><img alt="" src="/static/twitter.svg" width="27" height="27"/></a>
+        <a href="https://github.com/davidjgoss" title="GitHub">{% include "github.svg" %}</a>
+        <a href="https://www.linkedin.com/in/david-goss-2b986a181/" title="LinkedIn">{% include "linkedin.svg" %}</a>
+        <a href="https://twitter.com/davidjgoss" title="Twitter">{% include "twitter.svg" %}</a>
     </p>
 </body>
 </html>
