--- a/_includes/home.liquid
+++ b/_includes/home.liquid
@@ -8,7 +8,7 @@
     </section>
     <p class="home-social">
         <a href="https://github.com/davidjgoss" title="GitHub">{% include "github.svg" %}</a>
-        <a href="https://www.linkedin.com/in/david-goss-2b986a181/" title="LinkedIn">{% include "linkedin.svg" %}</a>
+        <a href="https://www.linkedin.com/in/davidjgoss/" title="LinkedIn">{% include "linkedin.svg" %}</a>
         <a href="https://twitter.com/davidjgoss" title="Twitter">{% include "twitter.svg" %}</a>
     </p>
     <small class="home-tools">Built with <a href="https://www.11ty.dev/">11ty</a>, deployed with <a href="https://www.netlify.com/">Netlify</a>.</small>
