inline icons, add impl details, minor tweaks (#24)
* inline svg icons to avoid http reqs

* add footnote about 11ty and netlify

* better

* update linkedin url

* fix title in readme

--- a/_includes/home.liquid
+++ b/_includes/home.liquid
@@ -7,9 +7,10 @@
         {{ content | safe }}
     </section>
     <p class="home-social">
-        <a href="https://github.com/davidjgoss" title="GitHub"><img alt="" src="/static/github.svg" width="27" height="27"/></a>
-        <a href="https://www.linkedin.com/in/david-goss-2b986a181/" title="LinkedIn"><img alt="" src="/static/linkedin.svg" width="27" height="27"/></a>
-        <a href="https://twitter.com/davidjgoss" title="Twitter"><img alt="" src="/static/twitter.svg" width="27" height="27"/></a>
+        <a href="https://github.com/davidjgoss" title="GitHub">{% include "github.svg" %}</a>
+        <a href="https://www.linkedin.com/in/davidjgoss/" title="LinkedIn">{% include "linkedin.svg" %}</a>
+        <a href="https://twitter.com/davidjgoss" title="Twitter">{% include "twitter.svg" %}</a>
     </p>
+    <small class="home-tools">Built with <a href="https://www.11ty.dev/">11ty</a>, deployed with <a href="https://www.netlify.com/">Netlify</a>.</small>
 </body>
 </html>
