--- a/css/home.css
+++ b/css/home.css
@@ -33,6 +33,10 @@
     margin-left: 0.5rem;
 }
 
-.home-social img {
+.home-social svg {
     width: 1.5rem;
+}
+
+.home-tools {
+    font-size: 0.75rem;
 }
