--- a/css/global.css
+++ b/css/global.css
@@ -30,7 +30,7 @@ h1 a, h2 a {
 
 h1 {
 	font-size: 2rem;
-	font-size: max(2rem, min(10vw, 10vh, 3.5rem));
+	font-size: clamp(2rem, min(10vw, 10vh), 3.5rem);
 	line-height: 1em;
 }
 
