--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,3 +1,3 @@
 <footer class="site-info" role="contentinfo">
-    <p>&copy; {% currentYear %} David Goss | <a href="/feed.xml">Subscribe</a> | <a href="https://github.com/davidjgoss/davidjgoss.github.io">Source</a></p>
+    <p>&copy; {% currentYear %} David Goss | <a href="/feed.xml">Subscribe</a> | <a href="https://github.com/davidjgoss/davidjgoss.co">Source</a></p>
 </footer>
